// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<button
  class="s-zdMNlEQUhDx4"
>
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Default
  </span>
   
   
</button>
`;

exports[`Disabled 1`] = `
<button
  class="s-zdMNlEQUhDx4"
  disabled=""
>
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Disabled
  </span>
   
   
</button>
`;

exports[`Large icon 1`] = `
<button
  class="iconOnly large s-zdMNlEQUhDx4"
>
  <i
    class="icons i-mdi-play s-zdMNlEQUhDx4"
  />
   
   
   
</button>
`;

exports[`Large text and icon 1`] = `
<button
  class="large s-zdMNlEQUhDx4"
>
  <i
    class="icons i-mdi-account s-zdMNlEQUhDx4"
  />
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Hey!
  </span>
   
   
</button>
`;

exports[`Primary 1`] = `
<button
  class="primary s-zdMNlEQUhDx4"
>
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Primary
  </span>
   
   
</button>
`;

exports[`Primary disabled 1`] = `
<button
  class="primary s-zdMNlEQUhDx4"
  disabled=""
>
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Primary
  </span>
   
   
</button>
`;

exports[`Primary icon 1`] = `
<button
  class="primary iconOnly s-zdMNlEQUhDx4"
>
  <i
    class="icons i-mdi-volume-plus s-zdMNlEQUhDx4"
  />
   
   
   
</button>
`;

exports[`Primary with badge 1`] = `
<button
  class="primary s-zdMNlEQUhDx4"
>
  <i
    class="icons i-mdi-account s-zdMNlEQUhDx4"
  />
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Hello
  </span>
   
   
  <div
    class="badge s-zdMNlEQUhDx4 halo"
  >
    5
  </div>
</button>
`;

exports[`Text and icon 1`] = `
<button
  class="s-zdMNlEQUhDx4"
>
  <i
    class="icons i-mdi-account s-zdMNlEQUhDx4"
  />
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Hello
  </span>
   
   
</button>
`;

exports[`With badge 1`] = `
<button
  class="s-zdMNlEQUhDx4"
>
  <i
    class="icons i-mdi-account s-zdMNlEQUhDx4"
  />
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Hello
  </span>
   
   
  <div
    class="badge s-zdMNlEQUhDx4 halo"
  >
    23
  </div>
</button>
`;

exports[`With badge limit 1`] = `
<button
  class="s-zdMNlEQUhDx4"
>
  <i
    class="icons i-mdi-alert s-zdMNlEQUhDx4"
  />
   
  <span
    class="s-zdMNlEQUhDx4"
  >
    Just too much
  </span>
   
   
  <div
    class="badge s-zdMNlEQUhDx4 halo"
  >
    999+
  </div>
</button>
`;
